@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: ui-applet-gnome.h,v $
-// Revision      : $Revision: 1.11 $
-// Revision date : $Date: 2006/01/13 19:47:33 $
+// Revision      : $Revision: 1.12 $
+// Revision date : $Date: 2006/05/27 21:01:45 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
@@ -50,6 +50,11 @@ public:
 	// ========================================================================
 	AppletGnome (class Biff *biff);
 	~AppletGnome (void);
+
+	// ========================================================================
+	//  tools
+	// ========================================================================
+	gboolean get_orientation (GtkOrientation &orient);
 
 	// ========================================================================
 	//  main
