@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: ui-applet-gui.h,v $
-// Revision      : $Revision: 1.8 $
-// Revision date : $Date: 2006/03/12 21:10:29 $
+// Revision      : $Revision: 1.9 $
+// Revision date : $Date: 2007/02/04 15:36:27 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
@@ -78,6 +78,8 @@ public:
 	gboolean widget_positions (guint i_width, guint i_height, guint t_width,
 							   guint t_height, guint &c_width, guint &c_height,
 							   gint &i_x, gint &i_y, gint &t_x, gint &t_y);
+	gboolean get_text_positioning (guint &horiz, guint &vert);
+	virtual gboolean get_orientation (GtkOrientation &orient);
 
 	// ========================================================================
 	//  main
